--- a/ToDo/Views/Home/Index.cshtml
+++ b/ToDo/Views/Home/Index.cshtml
@@ -70,8 +70,8 @@
                     <thead>
                         <tr>
                             <th style="width: 8%" scope="col">-</th>
-                            <th style="width: 62%" scope="col">Description</th>
-                            <th style="width: 10%" scope="col">Creation time</th>
+                            <th style="width: 55%" scope="col">Description</th>
+                            <th style="width: 17%" scope="col">Creation time</th>
                             <th style="width: 10%" scope="col">Done</th>
                             <th style="width: 10%" scope="col">Delete</th>
                         </tr>
@@ -86,7 +86,9 @@
                                 <th>
                                     @Model[i - 1].description
                                 </th>
-                                <th>@Model[i - 1].creationTime.ToString("yyyy-MM-dd")
+                                <th>
+                                    @ViewBag.agotime[i - 1]
+                                    <p id="fulltime">(@Model[i - 1].creationTime.ToString("yyyy-MM-dd hh:mm"))</p>
                                 </th>
                                 <th>
                                     <div>
