--- a/ToDo/Views/Home/Index.cshtml
+++ b/ToDo/Views/Home/Index.cshtml
@@ -113,7 +113,7 @@
             <p class="float-right">
             </p>
             <p>Create by Luboš Hájek © 2017-2018 by <a href="https://www.asp.net/"> ASP.NET MVC</a>, data stored in <a href="https://www.mysql.com/">MySQL</a> powered by <a href="http://tomcat.apache.org/">Apache Tomcat</a></p>
-            <p>Tamplate from Bootstrap <a href="../../">Visit the homepage</a> or read our <a href="../../getting-started/">getting started guide</a>.</p>
+            <p>Tamplate from Bootstrap <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a href="https://getbootstrap.com/docs/4.1/getting-started/introduction/">getting started guide</a>.</p>
         </div>
     </footer>
 
