--- a/ToDo/Views/Login/Index.cshtml
+++ b/ToDo/Views/Login/Index.cshtml
@@ -31,7 +31,7 @@
     {
         <div class="text-center mb-4">
             <h1 class="h3 mb-3 font-weight-normal">ToDo - Login</h1>
-            <p>This is private ToDo list for Luboš Hájek please you can use this ToDO List too only if you make a <a runat="server" href="@Url.Action("Index" , "Registration")">registration</a>.
+            <p>This is private ToDo list for Luboš Hájek please you can use this ToDo List too only if you make a <a runat="server" href="@Url.Action("Index" , "Registration")">registration</a>.
         </div>
 
         <div class="form-label-group">
