--- a/ToDo/Views/Registration/Index.cshtml
+++ b/ToDo/Views/Registration/Index.cshtml
@@ -12,27 +12,27 @@
     <title>Sign Up Form</title>
     <link href='https://fonts.googleapis.com/css?family=Nunito:400,300' rel='stylesheet' type='text/css'>
     <link href="~/Content/RegistrationPage.css" rel="stylesheet" />
-
 </head>
 <body>
 
-    <form action='@Url.Action("Add" , "Registration", FormMethod.Post)' method="post">
+<form action='@Url.Action("Add" , "Registration", FormMethod.Post)' method="post">
 
-        <h1>Registration</h1>
+    <h1>Registration</h1>
 
-        <fieldset>
-            <legend><span class="number">1</span>Your basic info</legend>
-            <label for="name">Name:</label>
-            @Html.TextBoxFor(x => x.login, new { id = "name" })
-            @Html.ValidationMessageFor(x => x.login)
-            <label class="form-control" for="password">Password:</label>
-            @Html.TextBoxFor(x => x.password, new { id = "password", type = "password" })
-            @Html.ValidationMessageFor(x => x.password)
-            <label for="password">Verify password:</label>
-            <input type="password" id="password" name="user_password2">
-        </fieldset>
-        <button type="submit">Sign Up</button>
-    </form>
+    <fieldset>
+        <legend><span class="number">1</span>Your basic info</legend>
+        <label for="name">Name:</label>
+        @Html.TextBoxFor(x => x.login, new { id = "name" })
+        @Html.ValidationMessageFor(x => x.login)
+        <label class="form-control" for="password">Password:</label>
+        @Html.TextBoxFor(x => x.password, new { id = "password", type = "password" })
+        @Html.ValidationMessageFor(x => x.password, null, new { @class = "validation" })
+        <label for="password">Verify password:</label>
+        <input type="password" id="password" name="user_password2">
+        @Html.ValidationMessage("passwordVertify")
+    </fieldset>
+    <button type="submit">Sign Up</button>
+</form>
 
 </body>
 </html>
